--- a/packages/artifacts/package.json
+++ b/packages/artifacts/package.json
@@ -66,6 +66,7 @@
     "@inquirer/select": "^2.3.4",
     "circomkit": "^0.2.1",
     "ora": "^5.4.1",
-    "snarkjs": "^0.7.4"
+    "snarkjs": "^0.7.4",
+    "@noir-lang/noir_js": "1.0.0-beta.3"
   }
 }
